# ttb-label-app

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  render.yaml  setup.sh
backend/: main.py  pyproject.toml  requirements.txt  test_api.sh
backend/app/: __init__.py
backend/app/models/: verification.py
backend/app/routers/: verification.py
backend/app/services/: ocr_service.py  verification_config.py  verification_constants.py  verification_service.py
frontend/: .env.production  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/assets/: main.css
frontend/src/components/: Header.vue  VerificationResults.vue
frontend/src/services/: api.js
frontend/src/utils/: formatters.js
frontend/src/views/: Home.vue  VerificationPage.vue
test-data/: Makefile  README.md  pyproject.toml
test-data/config/: test_cases.yaml
test-data/output/: 01_perfect_match.json  02_mismatch_brand.json  03_missing_information.json  04_different_abv.json  05_low_quality_blurry.json  06_partial_occlusion.json  07_missing_net_contents.json  07_special_characters.json  08_missing_net_contents.json  08_serif_difficult.json  09_serif_ornate.json  10_serif_thin.json  11_serif_display.json  12_serif_bodoni.json  13_font_with_blur.json  14_font_with_contrast.json
test-data/scripts/: generate_labels.py
test-data/templates/: label.html
