[project]
name = "ttb-label-app-backend"
version = "0.1.0"
description = "Backend for TTB Label Verification System"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "python-jose>=3.3.0",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
