# test-data/pyproject.toml
# Script-based tool, not an installable package

[project]
name = "test-data-generator"
version = "0.1.0"
description = "Test label image generator"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "pydantic>=2.9.2",
    "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-playwright>=0.5.2",
]

# This is a virtual/non-package project (just scripts + dependencies)
# No build system needed - uv will only manage dependencies
[tool.uv]
package = false
